objects/CMPL123QMS__Hazardous_Situation__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123QMS__Concatenate_Hazard_Situation_fields__c</fullName>
        <formula>Name  &amp; ' ' &amp; '|' &amp; ' ' &amp; LEFT( CMPL123QMS__Short_Description__c , 60) &amp; ' ' &amp; '|' &amp; ' ' &amp;TEXT(CMPL123QMS__P1_Score__c)</formula>
        <label>Concatenate Hazard Situation fields</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__HAZA_Description__c</fullName>
        <description>A Cross-object formula field to display the Hazard Analysis Short Description field.</description>
        <formula>IF(ISBLANK(CMPL123QMS__Hazard_Analysis__r.CMPL123QMS__Short_Description__c),"n/a",CMPL123QMS__Hazard_Analysis__r.CMPL123QMS__Short_Description__c)</formula>
        <label>HAZA Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__HCAT_Description__c</fullName>
        <description>A Cross-object formula field to display the Hazardous Situation Category Short Description field.</description>
        <formula>IF(ISBLANK(CMPL123QMS__Hazardous_Situation_Category__r.CMPL123QMS__Short_Description__c),"n/a",CMPL123QMS__Hazardous_Situation_Category__r.CMPL123QMS__Short_Description__c)</formula>
        <label>HCAT Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Hazard_Analysis__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup filed to the Hazard Analysis object</description>
        <label>Hazard Analysis</label>
        <referenceTo>CMPL123QMS__Hazard_Analysis__c</referenceTo>
        <relationshipLabel>Hazardous Situations</relationshipLabel>
        <relationshipName>Hazardous_Situations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Hazard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hazard</label>
        <referenceTo>CMPL123QMS__Hazard__c</referenceTo>
        <relationshipLabel>Hazardous Situations</relationshipLabel>
        <relationshipName>Hazardous_Situations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Hazardous_Situation_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hazardous Situation Category</label>
        <referenceTo>CMPL123QMS__Hazardous_Situation_Category__c</referenceTo>
        <relationshipLabel>Hazardous Situations</relationshipLabel>
        <relationshipName>Hazardous_Situations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__P1_Score_Justification__c</fullName>
        <label>P1 Score Justification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__P1_Score__c</fullName>
        <label>P1 Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Sequence_of_Events__c</fullName>
        <label>Sequence of Events</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Short_Description__c</fullName>
        <label>Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Hazardous Situation</label>
    <nameField>
        <displayFormat>HSIT-{00000}</displayFormat>
        <label>Hazard Situation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hazardous Situations</pluralLabel>
    <recordTypes>
        <fullName>CMPL123QMS__Hazardous_Situation</fullName>
        <active>true</active>
        <label>Hazardous Situation</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CMPL123QMS__Validation_Rule_for_P1_Score</fullName>
        <active>true</active>
        <errorConditionFormula>CMPL123QMS__P1_Score__c &lt; 0</errorConditionFormula>
        <errorDisplayField>CMPL123QMS__P1_Score__c</errorDisplayField>
        <errorMessage>P1 Score cannot be a negative number</errorMessage>
    </validationRules>
</CustomObject>